# changelog

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt
include/: changelog.h  utils.h  version.h
src/: changelog.cc  changelog.h  main.cc  utils.cc  version.cc
